Spinner activity created. Base classes and layouts created

--- a/app/src/main/res/layout/activity_covid.xml
+++ b/app/src/main/res/layout/activity_covid.xml
@@ -7,6 +7,7 @@
     android:gravity="top"
     android:orientation="vertical">
 
+    <include layout="@layout/activity_navigation"/>
 
     <LinearLayout
         android:layout_width="match_parent"
