--- a/app/src/main/res/layout/activity_covid.xml
+++ b/app/src/main/res/layout/activity_covid.xml
@@ -1,46 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    android:gravity="top"-->
+<!--    android:orientation="vertical">-->
+
+<!--    <include layout="@layout/activity_navigation"/>-->
+
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_weight="13"-->
+
+<!--        android:keepScreenOn="true"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:visibility="visible"-->
+<!--        tools:visibility="visible">-->
+<!--        -->
+<!--        <EditText-->
+<!--            android:id="@+id/message"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:hint="type here"-->
+<!--            android:inputType="textShortMessage"-->
+<!--            android:autofillHints="type here"-->
+<!--            />-->
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/magnify"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="28"-->
+<!--            app:srcCompat="@drawable/magnify" />-->
+<!--    </LinearLayout>-->
+
+<!--    <ListView-->
+<!--        android:id="@+id/listView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_weight="1"/>-->
+<!--</LinearLayout>-->
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:gravity="top"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:ignore="UseSwitchCompatOrMaterialXml">
 
-    <include layout="@layout/activity_navigation"/>
+    <include layout="@layout/activity_navigation"
+        android:id="header"/>
 
-    <LinearLayout
+    <EditText
+        android:id="@+id/message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="type here"
+        android:inputType="textShortMessage"
+        android:autofillHints="type here"
+        android:layout_alignParentStart="true"
+        />
+
+    <ImageButton
+        android:id="@+id/magnify"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="13"
+        android:layout_weight="28"
+        android:srcCompat="@drawable/magnify"
+        android:layout_alignParentEnd="true"/>
 
-        android:keepScreenOn="true"
-        android:orientation="horizontal"
-        android:visibility="visible"
-        tools:visibility="visible">
 
-        <EditText
-            android:id="@+id/searchText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="10"
-            android:hint="search..."
-            android:inputType="textPersonName"
-            android:keepScreenOn="true"
-            android:text="Search..."
-            android:visibility="visible" />
-
-        <ImageButton
-            android:id="@+id/magnify"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="28"
-            app:srcCompat="@drawable/magnify" />
-    </LinearLayout>
-
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"/>
-</LinearLayout>
+</RelativeLayout>
