--- a/app/src/main/res/layout/activity_covid.xml
+++ b/app/src/main/res/layout/activity_covid.xml
@@ -52,7 +52,7 @@
     tools:ignore="UseSwitchCompatOrMaterialXml">
 
     <include layout="@layout/activity_navigation"
-        android:id="header"/>
+        android:id="@+id/header"/>
 
     <EditText
         android:id="@+id/message"
@@ -69,7 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="28"
-        android:srcCompat="@drawable/magnify"
+        android:src="@drawable/magnify"
         android:layout_alignParentEnd="true"/>
 
 
